--- a/css/main.css
+++ b/css/main.css
@@ -101,72 +101,6 @@ samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
-button,
-input,
-optgroup,
-select,
-textarea {
-  color: inherit;
-  font: inherit;
-  margin: 0;
-}
-button {
-  overflow: visible;
-}
-button,
-select {
-  text-transform: none;
-}
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  cursor: pointer;
-}
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-input {
-  line-height: normal;
-}
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-}
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-input[type="search"] {
-  -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box;
-}
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-legend {
-  border: 0;
-  padding: 0;
-}
-textarea {
-  overflow: auto;
-}
 optgroup {
   font-weight: bold;
 }
@@ -417,101 +351,22 @@ input[type="button"] {
   box-sizing: border-box;
 }
 .button:hover,
-button:hover,
-input[type="submit"]:hover,
-input[type="reset"]:hover,
-input[type="button"]:hover,
-.button:focus,
-button:focus,
-input[type="submit"]:focus,
-input[type="reset"]:focus,
-input[type="button"]:focus {
+.button:focus {
   color: #333;
   border-color: #888;
   outline: 0;
 }
-.button.button-primary,
-button.button-primary,
-input.button-primary[type="submit"],
-input.button-primary[type="reset"],
-input.button-primary[type="button"] {
+.button.button-primary {
   color: #fff;
   background-color: #33c3f0;
   border-color: #33c3f0;
 }
 .button.button-primary:hover,
-button.button-primary:hover,
-input.button-primary[type="submit"]:hover,
-input.button-primary[type="reset"]:hover,
-input.button-primary[type="button"]:hover,
 .button.button-primary:focus,
-button.button-primary:focus,
-input.button-primary[type="submit"]:focus,
-input.button-primary[type="reset"]:focus,
-input.button-primary[type="button"]:focus {
+button.button-primary:focus {
   color: #fff;
   background-color: #1eaedb;
   border-color: #1eaedb;
-}
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="text"],
-input[type="tel"],
-input[type="url"],
-input[type="password"],
-textarea,
-select {
-  height: 38px;
-  padding: 6px 10px;
-  background-color: #fff;
-  border: 1px solid #d1d1d1;
-  border-radius: 4px;
-  box-shadow: none;
-  box-sizing: border-box;
-}
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="text"],
-input[type="tel"],
-input[type="url"],
-input[type="password"],
-textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-textarea {
-  min-height: 65px;
-  padding-top: 6px;
-  padding-bottom: 6px;
-}
-input[type="email"]:focus,
-input[type="number"]:focus,
-input[type="search"]:focus,
-input[type="text"]:focus,
-input[type="tel"]:focus,
-input[type="url"]:focus,
-input[type="password"]:focus,
-textarea:focus,
-select:focus {
-  border: 1px solid #33c3f0;
-  outline: 0;
-}
-label,
-legend {
-  display: block;
-  margin-bottom: 0.5rem;
-  font-weight: 600;
-}
-fieldset {
-  padding: 0;
-  border-width: 0;
-}
-input[type="checkbox"],
-input[type="radio"] {
-  display: inline;
 }
 label > .label-body {
   display: inline-block;
@@ -747,7 +602,7 @@ footer .bg-angled.bg-angled-opposite {
   padding-bottom: 5rem;
 }
 #testimonials {
-  padding-bottom: 30vw;
+  padding-bottom: 32vw;
 }
 #explanation {
   padding-bottom: 40vw;
@@ -939,7 +794,7 @@ footer .bg-angled.bg-angled-opposite {
   padding: 0;
 }
 #testimonials li:last-child {
-  margin-bottom: 10rem;
+  margin-bottom: 0;
 }
 #testimonials .bg-angled {
   background-color: #00aaff;
