--- a/css/neon.css
+++ b/css/neon.css
@@ -1,5 +1,4 @@
 a.neon {
-  position: relative;
   display: inline-block;
   padding: 15px 30px;
   color: #ffffff;
@@ -13,4 +12,21 @@ a.neon {
   background: #64d037;
   box-shadow: 0 0 10px #64d037, 0 0 40px #64d037, 0 0 80px #64d037;
   font-weight: 400;
+}
+
+a.neon-small {
+  display: inline-block;
+  padding: 4px 12px;
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  text-decoration: none;
+  font-size: 14px;
+  overflow: hidden;
+  transition: 0.2s;
+  border-radius: 4px;
+  background: #64d037;
+  box-shadow: 0 0 10px #64d037, 0 0 40px #64d037, 0 0 80px #64d037;
+  font-weight: 400;
+  margin-top: 16px;
 }
